Cycles Viewport freezes at 1 sample #32800

Closed
opened 2012-10-07 01:44:11 +02:00 by Manson Mamaril · 12 comments

%%%Specs:

  • Intel i3
  • 2GB RAM
  • 2GB Nvidia GeForce GT520
  • Windows 7 Professional

As the title says, everytime I activate viewport rendering in cycles it is always stuck at 1 sample and never goes forward... well that's all I can say for now... %%%

%%%Specs: - Intel i3 - 2GB RAM - 2GB Nvidia GeForce GT520 - Windows 7 Professional As the title says, everytime I activate viewport rendering in cycles it is always stuck at 1 sample and never goes forward... well that's all I can say for now... %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Which Blender version do you use? Also please provide a blend file where the issue happens... I can't confirm this here with 2.64, and a nvidia 540M. Also do you use 32 or 64bit OS? %%%

%%%Which Blender version do you use? Also please provide a blend file where the issue happens... I can't confirm this here with 2.64, and a nvidia 540M. Also do you use 32 or 64bit OS? %%%

%%%Also please mention if you are doing CPU or GPU rendering.%%%

%%%Also please mention if you are doing CPU or GPU rendering.%%%

%%%I have the same issue with the with booth CPU and GPU (cypress 2x) cycles viewport rendering with some blend files. See attachment. Other files and the cube start-up file work fine.

specs:

  • blender 2.64 (r51026)

  • windows 7 prof. 64bit

  • 12GB Ram

  • 2x intel Xeon E5520 @ 2.27GHz

  • Ati Radeon HD 5900 serie

Regards, Steven
%%%

%%%I have the same issue with the with booth CPU and GPU (cypress 2x) cycles viewport rendering with some blend files. See attachment. Other files and the cube start-up file work fine. specs: - blender 2.64 (r51026) - windows 7 prof. 64bit - 12GB Ram - 2x intel Xeon E5520 @ 2.27GHz - Ati Radeon HD 5900 serie Regards, Steven %%%

%%%Using 512x512 tiles isn't a nice idea here -- this ends up with tiles like 2 pixels large which makes rendering really really slow (it not stuck, it just incredible slow). For final rendering there's a clamping happens to prevent small tiles. Attached a patch which does the same for preview.

Would want Brecht to check if it's indeed ok.

@brecht, i also seems tile clamping for renders with buffers enabled doesn't happen correct -- it allows to have tiles 2x2 pixels. Is it intended?%%%

%%%Using 512x512 tiles isn't a nice idea here -- this ends up with tiles like 2 pixels large which makes rendering really really slow (it not stuck, it just incredible slow). For final rendering there's a clamping happens to prevent small tiles. Attached a patch which does the same for preview. Would want Brecht to check if it's indeed ok. @brecht, i also seems tile clamping for renders with buffers enabled doesn't happen correct -- it allows to have tiles 2x2 pixels. Is it intended?%%%

%%%Clamping the tile size sounds fine, and it should happen for save buffers also, if it doesn't work don't think that's intentional. I don't see any patch attached though.%%%

%%%Clamping the tile size sounds fine, and it should happen for save buffers also, if it doesn't work don't think that's intentional. I don't see any patch attached though.%%%

%%%Brecht, initial patch is attached now. Would check on buffers tiles as a separate change.%%%

%%%Brecht, initial patch is attached now. Would check on buffers tiles as a separate change.%%%

%%%Patch looks fine to me.%%%

%%%Patch looks fine to me.%%%

%%%In the recent time i made multiple tests with different tiles sizes. If I'm not entirely wrong then there is something like an optimal tile size (not tile count) for different GPUs. Hitting it perfectly gives a great performance boost. On a GTX 560 TI i came to the conclusion that the for small renderings 1x1 would be the best. For larger images it isn't as good, and 2x2 or 4x4 renders faster. Same appeared on other graphics cards as well, but with different tile sizes. So in the end i have to assume that there is some kind of optimal size for each GPU. But for the user it means that he has to go trough various settings to figure out which tile size (he actually sets the number of tiles) would be optimal. Shouldn't Blender use the resolution of the tiles instead, and maybe have internal presets for various GPUs?%%%

%%%In the recent time i made multiple tests with different tiles sizes. If I'm not entirely wrong then there is something like an optimal tile size (not tile count) for different GPUs. Hitting it perfectly gives a great performance boost. On a GTX 560 TI i came to the conclusion that the for small renderings 1x1 would be the best. For larger images it isn't as good, and 2x2 or 4x4 renders faster. Same appeared on other graphics cards as well, but with different tile sizes. So in the end i have to assume that there is some kind of optimal size for each GPU. But for the user it means that he has to go trough various settings to figure out which tile size (he actually sets the number of tiles) would be optimal. Shouldn't Blender use the _resolution of the tiles_ instead, and maybe have internal presets for various GPUs?%%%

%%%Commited the patch to rev51179, will look into buffers tile size later.

As for tile resolution it could indeed be better way to control tiles for GPU, but such a discussion out of scope of bug tracker :)%%%

%%%Commited the patch to rev51179, will look into buffers tile size later. As for tile resolution it could indeed be better way to control tiles for GPU, but such a discussion out of scope of bug tracker :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%It was not intended to set the tile count that high, but I altered the value in the past for testing and I forgot about it (previous Blender versions worked fine with the high count). I lowered the tile count for the attached Blend file and it doesn't freeze anymore!

Thanks %%%

%%%It was not intended to set the tile count that high, but I altered the value in the past for testing and I forgot about it (previous Blender versions worked fine with the high count). I lowered the tile count for the attached Blend file and it doesn't freeze anymore! Thanks %%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32800
No description provided.