Fix #32800: Cycles viewport incredible slow with high number of tiles

Final rendering is clamping tile resolution if it's too small, which was missing for viewport