source/blender/editors/space_view3d/view3d_draw.c
@@ -2856,6 +2856,12 @@ static int view3d_main_area_draw_engine(const bContext *C, ARegion *ar, int draw
 		engine->tile_x = ceil(ar->winx / (float)scene->r.xparts);
 		engine->tile_y = ceil(ar->winy / (float)scene->r.yparts);
 
+		/* clamp small tile sizes to prevent inefficient threading utilization
+		 * the same happens for final renders as well
+		 */
+		engine->tile_x = MAX2(engine->tile_x, 64);
+		engine->tile_y = MAX2(engine->tile_x, 64);
+
 		type->view_update(engine, C);
 
 		rv3d->render_engine = engine;
